--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,9 +1,9 @@
 ARG APT_GCC=library/gcc:9.2
 
-FROM library/ubuntu:bionic AS bionic
+FROM library/ubuntu:focal AS focal
 ARG DOWNLOADS=/usr/src/downloads
-ARG LINUX_FIRMWARE=linux-firmware=1.173.18
-ARG LINUX_SOURCE=linux-source-5.0.0=5.0.0-47.51~18.04.1
+ARG LINUX_FIRMWARE=linux-firmware=1.187.25
+ARG LINUX_SOURCE=linux-source-5.4.0=5.4.0-97.110
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN set -x \
@@ -20,8 +20,8 @@ ARG DOWNLOADS=/usr/src/downloads
 # Wireguard support, included in Linux in 5.6+
 ARG WG_URL="https://git.zx2c4.com"
 ARG WG_REPO="wireguard-linux-compat"
-ARG WG_TAG=v1.0.20200413
-COPY --from=bionic ${DOWNLOADS}/ ${DOWNLOADS}/
+ARG WG_TAG=v1.0.20211208
+COPY --from=focal ${DOWNLOADS}/ ${DOWNLOADS}/
 RUN apt-get update \
  && apt-get install -y \
     kernel-wedge \
